added composer license

--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,6 @@
                 "AlperenErsoy\\FilamentExport\\FilamentExportServiceProvider"
             ]
         }
-    }
+    },
+    "license": "MIT"
 }
