--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "php": "^8.0",
         "filament/filament": "^2.0",
         "maatwebsite/excel": "^3.1",
-        "dompdf/dompdf": "^1.2"
+        "barryvdh/laravel-dompdf": "^1.0"
     },
     "extra": {
         "laravel": {
