--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -35,5 +35,16 @@ jobs:
             - name: Install dependencies
               run: |
                   composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
+            - name: Generate key
+              run: php artisan key:generate
+            - name: Directory Permissions
+              run: chmod -R 777 storage bootstrap/cache
+            - name: Create Database
+              run: |
+                mkdir -p database
+                touch database/database.sqlite
             - name: Execute tests
+              env:
+                DB_CONNECTION: sqlite
+                DB_DATABASE: database/database.sqlite
               run: ./vendor/bin/pest --verbose
