--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -36,7 +36,7 @@ jobs:
               run: |
                   composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
             - name: Execute tests
-              env: |
-                  DB_CONNECTION=sqlite
-                  DB_DATABASE=:memory:
+              env:
+                DB_CONNECTION: sqlite
+                DB_DATABASE: :memory:
               run: ./vendor/bin/pest --verbose
