--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,8 @@
     "require": {
         "php": "^8.0",
         "filament/filament": "^2.0",
-        "maatwebsite/excel": "^3.1",
-        "barryvdh/laravel-dompdf": "^2.0"
+        "barryvdh/laravel-dompdf": "^2.0",
+        "spatie/simple-excel": "^2.3"
     },
     "require-dev": {
         "orchestra/testbench": "^7.6",
