--- a/composer.json
+++ b/composer.json
@@ -20,14 +20,15 @@
     ],
     "require": {
         "php": "^8.0",
-        "filament/filament": "^2.0",
+        "filament/tables": "^2.0",
         "barryvdh/laravel-dompdf": "^2.0",
         "spatie/simple-excel": "^3"
     },
     "require-dev": {
         "orchestra/testbench": "^7.6",
         "pestphp/pest": "^1.21",
-        "pestphp/pest-plugin-livewire": "^1.0"
+        "pestphp/pest-plugin-livewire": "^1.0",
+        "filament/filament": "^2.0"
     },
     "extra": {
         "laravel": {
