--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "php": "^8.0",
         "filament/tables": "^2.0",
         "barryvdh/laravel-dompdf": "^2.0",
-        "spatie/simple-excel": "^3"
+        "spatie/simple-excel": "^3.0 >=3.2.0"
     },
     "require-dev": {
         "orchestra/testbench": "^7.6",
